# SlicerWMA

./: CMakeLists.txt  README.md  SuperBuild.cmake
SuperBuild/: External_python-whitematteranalysis.cmake
WMAScriptedModule/: CMakeLists.txt  WMAScriptedModule.py
WhiteMatterAnalysisCLI/: CMakeLists.txt  WhiteMatterAnalysisCLI.py
